# HDagg-benchmark

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindMKL.cmake  FindPAPI.cmake  HDAGGDependencies.cmake  HDAGGDownloadExternal.cmake
demo/: CMakeLists.txt  SpTRSV_runtime.cpp  SpTRSV_runtime.h
scripts/: SpICh0_Final.sh  SpICh0_Final_AMD.sh  SpILU0_Final.sh  SpILU0_Final_AMD.sh  SpILU0_UL_Prof_LB.sh  SpILU0_UL_Prof_MEM.sh  SpTrSv_Final.sh  SpTrSv_Final_AMD.sh  SpTrSv_LL_Prof_LB.sh  SpTrSv_LL_Prof_MEM.sh
src/GLC/: glc.cpp
src/GLC/includes/: glc.h
src/Group/: Group.cpp  Utils.cpp
src/Group/includes/: Group.h  Utils.h
src/dense_blas/: BLAS.cpp
src/hdagg/: hdagg.cpp
src/hdagg/includes/: hdagg.h
src/lbc/: CMakeLists.txt  lbc_csc.cpp  lbc_csc_dag.cpp  lbc_tree.cpp  lbc_utils.cpp
src/lbc/includes/: lbc.h  lbc_utils.h
src/profiler/: StatSpMat.cpp  StatSpMat_v1.cpp
src/profiler/includes/: Profiler.h  StatSpMat.h  StatSpMat_v1.h
src/sparse_blas/: Guass_seidel.cpp  executor.cpp  spic0.cpp  spick.cpp  spilu0.cpp  sptrsv.cpp
src/sparse_blas/includes/: executor.h  sparse_blas_lib.h
src/utils/: BCSCMatrix.cpp  FusionDemo.cpp  SuperNodalTools.cpp  etree.cpp  metis_interface.cpp  sparse_inspector.cpp  sparse_io.cpp  sparse_utilities.cpp  test_utils.cpp  utils.cpp
src/utils/includes/: BCSCMatrix.h  FusionDemo.h  PAPIWrapper.h  SpMP_Interface.h  SuperNodalTools.h  csv_utils.h  def.h  metis_interface.h  papi_utils.h  sparse_inspector.h  sparse_io.h  sparse_utilities.h  test_utils.h  utils.h
